kubernetes_structure/100-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev-personal-namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev-argo-cd
...
