kubernetes_structure/600-nginxService.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-loadbalancer
  namespace: dev-personal-namespace
spec:
  selector:
    app: nginx-app
  ports:
  - protocol: TCP
    port: 8080 
    targetPort: 80
  type: LoadBalancer
...
