kubernetes_structure/700-nginxIngress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-app-ingress
  namespace: dev-personal-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx-app.example.com
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
...
